<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditcardActivity"
    android:background="@color/light_grey">

    <View
        android:id="@+id/tool"
        android:layout_width="415dp"
        android:layout_height="78dp"
        android:background="@drawable/rectangletool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:elevation="10dp"
        android:text="@string/Done"
        android:textAllCaps="false"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view13" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/Checkout"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="368dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/search_view_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <View
        android:id="@+id/view12"
        android:layout_width="368dp"
        android:layout_height="260dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_view_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view13"
        android:layout_width="368dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_view_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view12" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/Payment"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Card"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/money"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Holder"
        app:layout_constraintStart_toStartOf="@+id/view12"
        app:layout_constraintTop_toTopOf="@+id/view12" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/CardNo"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Expiry"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="140dp"
        android:text="@string/CVV"
        app:layout_constraintEnd_toEndOf="@+id/view12"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Ticket"
        app:layout_constraintStart_toStartOf="@+id/view13"
        app:layout_constraintTop_toTopOf="@+id/view13" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Fare"
        app:layout_constraintStart_toStartOf="@+id/textView47"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Total"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tp"
        app:layout_constraintEnd_toEndOf="@+id/view13"
        app:layout_constraintTop_toTopOf="@+id/view13" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ft"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/t"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView51"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <EditText
        android:id="@+id/holderName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:autofillHints="@string/EnterName"
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:hint="@string/EnterName"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:autofillHints="@string/EnterCardNo"
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:hint="@string/EnterCardNo"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <EditText
        android:id="@+id/expiryDate"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:autofillHints="@string/ExpiryDate"
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:hint="@string/ExpiryDate"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView45"
        app:layout_constraintTop_toBottomOf="@+id/textView45" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:autofillHints="@string/cvv"
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView46"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:srcCompat="@drawable/ic_baseline_payments_24" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="24dp"
        android:layout_height="19dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:srcCompat="@drawable/visacard" />

    <View
        android:id="@+id/view3"
        android:layout_width="360dp"
        android:layout_height="2dp"
        android:layout_marginBottom="56dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/view13"
        app:layout_constraintEnd_toEndOf="@+id/view13"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="@+id/view13" />


</androidx.constraintlayout.widget.ConstraintLayout>